Conectar con google cloud

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-APP_NAME=enlacestv
-APP_PORT=1401
-VUE_APP_USER=testing
-VUE_APP_PSWD=
+VUE_APP_APIKEY= AIzaSyAiZMOA8Xwah60YhRmmcsqz7u6Yv1eABuA
+VUE_APP_AUTHDOMAIN=navas-moreno.firebaseapp.com
+VUE_APP_PROJECTID=navas-moreno
+VUE_APP_STORAGEBUCKET=navas-moreno.appspot.com
+VUE_APP_MESSAGINGSENDERID=280089537055
+VUE_APP_APPID=1:280089537055:web:71cf187e885adeddf7032
