--- a/enlacestv/package.json
+++ b/enlacestv/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.9.4",
     "bulma-extensions": "^6.2.7",
     "core-js": "^3.8.3",
+    "firebase": "^10.7.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
