--- a/enlacestv/package.json
+++ b/enlacestv/package.json
@@ -8,24 +8,25 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5",
-    "bulma": "^0.9.4",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "bulma": "^1.0.3",
     "bulma-extensions": "^6.2.7",
-    "core-js": "^3.8.3",
-    "firebase": "^10.7.0",
-    "vue": "^3.2.13",
-    "vue-router": "^4.2.5"
+    "core-js": "^3.40.0",
+    "firebase": "^11.3.1",
+    "resend": "^4.1.2",
+    "sass": "^1.85.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "node-sass": "^9.0.0",
-    "sass-loader": "^13.3.2"
+    "@vue/cli-service": "^5.0.8",
+    "eslint": "^9.20.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "sass-loader": "^16.0.5"
   },
   "eslintConfig": {
     "root": true,
